# wedi

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL_GUIDE.md  LICENSE  README.md  RELEASE.md  Untitled  WEDI_SYNTAX_HIGHLIGHTING_GUIDE.md  development-plan.md  install.ps1  install.sh  multi-encoding-support-plan.md  test_comment.txt  test_paste.txt  test_wide_chars.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  winget.yml
dev/done/: conversation-2025-12-04-110006.txt  development-code_review.md
examples/: manual_highlight_test.rs  test_newline_issue.rs  test_syntect.rs  test_syntect_v2.rs
plan/done/: WEDI_SYNTAX_HIGHLIGHTING_GUIDE.md  development-plan-slimming.md  development-plan.md
src/: clipboard.rs  comment.rs  config.rs  cursor.rs  dialog.rs  editor.rs  lib.rs  main.rs  search.rs  terminal.rs  view.rs
src/buffer/: history.rs  mod.rs  rope_buffer.rs
src/highlight/: cache.rs  detector.rs  engine.rs  mod.rs
src/input/: handler.rs  keymap.rs  mod.rs
src/utils/: line_wrapper.rs  logger.rs  mod.rs
