[package]
name = "wedi"
version = "0.1.15"
edition = "2021"
authors = ["wen"]
description = "A cross-platform minimalist lightweight CLI text editor"
license = "MIT"

[dependencies]
crossterm = "0.27"
pico-args = "0.5"      # 替換 clap
ropey = "1.6"           # 文本緩衝區
unicode-width = "0.1"   # Unicode 字符寬度計算
anyhow = "1.0"          # 錯誤處理
encoding_rs = "0.8"     # 編碼處理

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "winbase", "memoryapi", "winnls"] }

[dev-dependencies]
assert_cmd = "2.0"      # CLI 測試
predicates = "3.0"      # 測試斷言
tempfile = "3.8"        # 臨時文件測試

[profile.release]
strip = true            # 移除符號以減小二進制文件大小
lto = true              # 啟用鏈接時優化
opt-level = "z"         # 優化文件大小
codegen-units = 1       # 單編譯單元
panic = "abort"         # 減少 panic 處理代碼
incremental = false     # 避免未使用的編譯 cache
